crates/test-files/fixtures/compile_errors/init_call_on_self.fe
contract Foo:
  pub fn __init__():
    pass

  fn bar():
    self.__init__()